--- a/delayq.html
+++ b/delayq.html
@@ -4,11 +4,11 @@
     <style>
 .flex-container {
   display: flex;  flex-direction:row;
-  background-color: goldenrod;
+  background-color: rgb(206, 77, 157);
 }
 
 .flex-container > div {  /*div children of the flex container*/
-background-color: #f1f1f1; 
+background-color: #7bb38f; 
 margin: 10px;  padding: 20px;  font-size: 30px;
 }
 
@@ -22,7 +22,7 @@ margin: 10px;  padding: 20px;  font-size: 30px;
 .btn{
 box-sizing: 100px;
 color: white;
-background-color: rgb(247, 225, 28);
+background-color: rgb(31, 125, 146);
 padding: 2px 2px;
 margin: 2px;
 height: 40px;
@@ -43,8 +43,7 @@ border-radius: 10px;
       <div class = "delayQ">row item 3</div>  
     </div>
 
-<p> Press the button mf and create a new element of type div and then add it to the container.
-    </p>
+<p> Press the button mf and create a new element of type div and then add it to the container.</p>
     <button class = "btn" onclick="makeNewDiv()">Add Value</button>
     <br>
     <input class="btn" type="button" value="Get" onclick="get()">
