--- a/hunter.html
+++ b/hunter.html
@@ -33,7 +33,7 @@
 <div class="container-fluid">
 
   <h1>Find the mouse by Nandini Devabattula</h1>
-  <p>Click on the bushes to search for the mouse, bekware the cat</p>
+  <p>Click on the bushes to search for the mouse, beware the cat</p>
   <p id="bushes">Number of bushes checked is zero</p>
   <p id="Penalty">penalty is zero</p>
   <p onclick="help()">Click for help</p>
